Stdlib changes, runtime, String => Text